# trading_assistant

./: .gitignore  README.md  REVIEW.md  pyproject.toml  requirements.txt
.cursor/commands/: debug.md
.cursor/rules/: agent.mdc  project.mdc
docs/: architecture.md  market_data.md  runbook.md
scripts/: optimize_strategy.py  run_backtest.py  run_scheduler.py
src/trading/: __init__.py
src/trading/agents/: __init__.py  backtest_agent.py  base_agent.py  evaluator_agent.py  optimizer_agent.py  orchestrator_agent.py  registry_agent.py  scheduler_agent.py  simulator_agent.py
src/trading/domain/: __init__.py  entities.py  messages.py  ports.py  types.py
src/trading/infrastructure/: __init__.py
src/trading/strategies/: __init__.py  factory.py
tests/: README.md  __init__.py  conftest.py
tests/agents/: __init__.py  test_backtest_agent.py  test_base_agent.py  test_evaluator_agent.py  test_optimizer_agent.py  test_orchestrator_agent.py  test_registry_agent.py  test_scheduler_agent.py  test_simulator_agent.py
tests/domain/: __init__.py  test_domain_entities.py  test_domain_types.py  test_messages.py
tests/infrastructure/: __init__.py
tests/infrastructure/backtest/: __init__.py  test_backtest_config.py  test_cycles_repository.py  test_event_dispatcher.py  test_runner.py
tests/infrastructure/evaluation/: __init__.py  test_metrics.py
tests/infrastructure/exchange/: __init__.py  (+2 more)
tests/integration/: __init__.py  test_agents_integration.py  test_backtest_end_to_end.py
tests/strategies/: __init__.py  test_carga_descarga_strategy.py  test_factory.py
(+61 files in other folders)
